# pagi-phoenix-agi

./: .cursorrules  .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  TEMPLATE_README.md  docker-compose.yml
contract/: README.md  types.ts
docs/: Backend-Integration-Guide.md  Boilerplate-Contract.md
pagi-core-orchestrator/: Cargo.toml  build.rs
pagi-core-orchestrator/src/: main.rs  memory_manager.rs  proto.rs  safety_governor.rs  watchdog.rs
pagi-frontend/: README.md  package.json
pagi-intelligence-bridge/: pyproject.toml
pagi-intelligence-bridge/scripts/: bench_rlm.py  peek_proto.py  run_skill.py  run_tests.ps1
pagi-intelligence-bridge/src/: __init__.py  embed_and_upsert.py  main.py  mock_provider.py  recursive_loop.py
pagi-intelligence-bridge/src/pagi_pb/: __init__.py  pagi_pb2.py  pagi_pb2_grpc.py
pagi-intelligence-bridge/src/skills/: README.md  analyze_code.py  evolve_skill_from_patch.py  evolved_20260204_120048.py  execute_skill.py  generate_new_skill.py  list_dir.py  list_files_recursive.py  peek_file.py  read_entire_file_safe.py  run_python_code_safe.py  run_tests.py  save_skill.py  search_codebase.py  write_file_safe.py
pagi-intelligence-bridge/tests/: conftest.py  test_rlm.py
pagi-proto/: pagi.proto
scripts/: init-new-app.sh
