[package]
name = "pagi-core-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9"
tokio = { version = "1", features = ["full"] }
prost = "0.11"
dashmap = "5.4"
surrealdb = "1.0"
qdrant-client = "0.10"
tokio-stream = "0.1"
pyo3 = "0.18"

[build-dependencies]
tonic-build = "0.9"
