[package]
name = "pagi-core-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10"
tonic = "0.9"
tokio = { version = "1", features = ["full"] }
prost = "0.11"
dashmap = "5.4"
surrealdb = "1.0"
qdrant-client = "0.10"
tokio-stream = "0.1"
pyo3 = "0.18"
git2 = "0.17"
uuid = { version = "0.8", features = ["v4"] }
sha2 = "0.10"
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.9"
